Version 0.2.2 Stacked Bars
- Added support for Stacked Bars

Version 0.2.1 Support for non-facelets
- Added Tag classes to be able to support non-facelets JSF 1.2 applications

Version 0.2.0 Drag and Drop Support
- Added support for dragging the X-axis and triggering a ValueChangeEvent with the number of X-axis values dragged. 
- Added AJAX support for valueChangeListener, as well as re-drawing of the chart based on the result of the valueChangedEvent
- Added JavaScript library blackbird Javascript library for Javascript Debugging of JSFlot.  
- Updated to Flotr revision 123.

Version 0.1.6 
- X and Y axis labels and titles can be rotated, specified in degrees.
- Fixed a bug where only /faces/* prefix and *.jsf suffix for the Faces Servlet works with loading the JavaScript Resources.  

Version 0.1.5 - Support for Clustered Bar Charts
- Added support for Clustered Bar Charts (replacing the overlay-bar charts)
- Upgraded Flotr to Revision 114
- Added support for markers both globaly and per series.
- Added support to set marker position
- Support for vertical Y-Axis Label
- Support for Crosshair in X, Y or XY directions

Version 0.1.3 - PhaseListener bugfix
- Fixed bug where the ResouceLoaderPhaseListener assumed that the Faces Servlet mapped to *.jsf. JSFlot now works with any URL-pattern where the Faces Servlet is called as a suffix (ie. *.jsf, *.faces), as well as /faces/*.  

Version 0.1.2 - Fix for Bug in FlotChartrendererData
- Fixed cast bug in FlotChartRendererData where some values were cast to the wrong type.
 
Version 0.1.1 - Initial Release
XYDataPoint.java
- The XYDataPoint is simply what it states, and holds a single set of X and Y coordinates.
XYDataList
- The XYDataList serves two purposes. First it holds a java.util.List<XYDataPoint> list of a set of XYDataPoints to represent a complete data series.
- Second it has additional fields for storing the seires label, as well as information regarding this series line and data point rendering.